[gd_scene load_steps=6 format=3 uid="uid://bey3tlrj2thvd"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_8k2gi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_reefv"]
bg_color = Color(0.380392, 0.254902, 0.290196, 0.666667)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3q57p"]
bg_color = Color(0.321569, 0.211765, 0.247059, 0.784314)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yuos"]
bg_color = Color(0.380392, 0.254902, 0.290196, 0.666667)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jg8gg"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8k2gi")
menu_path = "res://main_menu.tscn"

[node name="Panel" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.709804)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -898.0
offset_top = -486.0
offset_right = -609.0
offset_bottom = -371.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.854902, 0.854902, 0.854902, 1)
theme_override_colors/font_pressed_color = Color(0.556863, 0.556863, 0.556863, 1)
theme_override_colors/font_hover_color = Color(0.854902, 0.854902, 0.854902, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_reefv")
theme_override_styles/hover = SubResource("StyleBoxFlat_3q57p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3yuos")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jg8gg")
text = "Menu"

[node name="BackGameButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 581.0
offset_top = -486.0
offset_right = 870.0
offset_bottom = -371.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.854902, 0.854902, 0.854902, 1)
theme_override_colors/font_pressed_color = Color(0.556863, 0.556863, 0.556863, 1)
theme_override_colors/font_hover_color = Color(0.854902, 0.854902, 0.854902, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_reefv")
theme_override_styles/hover = SubResource("StyleBoxFlat_3q57p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3yuos")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jg8gg")
text = "Voltar"

[connection signal="pressed" from="PauseButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BackGameButton" to="." method="_on_back_game_button_pressed"]
